--- a/login.css
+++ b/login.css
@@ -1,9 +1,9 @@
 
 body{
     background-color: rgb(0, 0, 0);
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     align-items: center;
     justify-content: center;
+    
 }
 
 h1{
@@ -13,6 +13,7 @@ h1{
     justify-content: center;
     color: white;
     padding: 20px;
+
 }
 
 .imagem{
@@ -30,7 +31,8 @@ h1{
     display: flex;
     align-items: center;
     justify-content: center;
-    color: white
+    color: white;
+    font-family: fantasy;
 }
 
 header{
